added new content to about ua page

--- a/ministries.html
+++ b/ministries.html
@@ -110,6 +110,24 @@
 
        
         <div class="container mt-4 mb-4">
+          <div class="row mb-5">
+            <div class="col-12 col-sm-10 offset-1">
+              <p>
+                The great commission in Mathew 28: 19-20 
+                <cite class="mt-3 text-gold"><i class="fa fa-quote-left"></i> <small class="text-sm">19.</small> Go then and make disciples of all the nations, baptizing them into the name of the Father and the Son and the Holy Spirit.
+                  <small class="text-sm">20.</small> Teaching them to observe everything I have commanded you, and behold, I am with you all the days perpetually, and uniformly, and on every occasion, to the very close and consummation of the ages. <i
+                      class="fa fa-quote-right"></i></cite>
+ <b>Amen</b>.
+              </p>
+              <p>
+                Reaching out to all the nations is a great fusion of TRC’s Mission statement and a driver into all we do. Thus,
+Our Mission: <b class="text-gold">Reaching out to lost souls, the broken-hearted and the needy with the truth of the gospel of Jesus Christ, serving them with integrity and compassion giving God His highest praises in the beauty of His holiness.</b>
+
+              </p>
+              <p>
+                TRC has 14 different ministries whose mandate is to bring people to Christ through a variety of events and activities. These ministries are powerful evangelism tools to bring the lost, the broken hearted and the needy to the kingdom of light and to strengthen those already within to do more as they grow the fruit of the spirit and maintain their righteousness.</p>
+            </div>
+          </div>
             <div class="row">
                 <div class="col-12">
                     <div class="row row-cols-3 row-cols-md-4 g-4">
@@ -219,7 +237,7 @@
                           </div>
                           <div class="col">
                             <div class="card ministry-card shadow">
-                              <img src="images/people.jpg" class="card-img-top" alt="...">
+                              <img src="images/childrenchurch.jpg" class="card-img-top" alt="...">
                               <img class="mx-auto card-logo" src="images/trc_mini_color.png" alt="trc logo" width="50" />
                               <div class="card-body">
                                 <h5 class="card-title text-blue">Children`s Ministry</h5>
