added text wrap to overflowing compassion item

--- a/about.html
+++ b/about.html
@@ -715,7 +715,7 @@
                                 <span class="badge bg-gold m-1">Salvation of Souls, Studying the Word</span>
                                 <span class="badge bg-gold m-1">Fasting and praying</span>
                                 <span class="badge bg-gold m-1">Praising God through songs and dance</span>
-                                <span class="badge bg-gold m-1">Empowering people to righteously prosper in business and
+                                <span class="badge bg-gold m-1 text-wrap">Empowering people to righteously prosper in business and
                                     every other area of life through practicing God’s Word</span>
                             </h5>
                         </div>
