removed service narrations

--- a/index.html
+++ b/index.html
@@ -203,55 +203,35 @@
                                 <i class="fa-solid fa-play"></i>
                             </div>
                             <h6 class="text-blue text-center mt-3 mb-3">Sermons</h6>
-                            <p class="servicetext text-center">Lorem ipsum dolor sit amet,
-                                consectetur adipiscing elit.
-                                Morbi arcu quam, consectetur
-                                quis nisi ac, placerat
-                                condimentum quam. </p>
+                            <p class="servicetext text-center"> </p>
                         </div>
                         <div class="col">
                             <div class="service-icon bg-blue-grey m-auto">
                                 <i class="fa-solid fa-location-dot"></i>
                             </div>
                             <h6 class="text-blue text-center mt-3 mb-3">Prayer</h6>
-                            <p class="servicetext text-center">Lorem ipsum dolor sit amet,
-                                consectetur adipiscing elit.
-                                Morbi arcu quam, consectetur
-                                quis nisi ac, placerat
-                                condimentum quam. </p>
+                            <p class="servicetext text-center"> </p>
                         </div>
                         <div class="col">
                             <div class="service-icon bg-blue-grey m-auto">
                                 <i class="fa-solid fa-hand-holding-medical"></i>
                             </div>
                             <h6 class="text-blue text-center mt-3 mb-3">Community Help</h6>
-                            <p class="servicetext text-center">Lorem ipsum dolor sit amet,
-                                consectetur adipiscing elit.
-                                Morbi arcu quam, consectetur
-                                quis nisi ac, placerat
-                                condimentum quam. </p>
+                            <p class="servicetext text-center"> </p>
                         </div>
                         <div class="col">
                             <div class="service-icon bg-blue-grey m-auto">
                                 <i class="fa-regular fa-comment-dots"></i>
                             </div>
                             <h6 class="text-blue text-center mt-3 mb-3">Counselling</h6>
-                            <p class="servicetext text-center">Lorem ipsum dolor sit amet,
-                                consectetur adipiscing elit.
-                                Morbi arcu quam, consectetur
-                                quis nisi ac, placerat
-                                condimentum quam. </p>
+                            <p class="servicetext text-center"> </p>
                         </div>
                         <div class="col">
                             <div class="service-icon bg-blue-grey m-auto">
                                 <i class="fa-solid fa-heart"></i>
                             </div>
                             <h6 class="text-blue text-center mt-3 mb-3">Weddings</h6>
-                            <p class="servicetext text-center">Lorem ipsum dolor sit amet,
-                                consectetur adipiscing elit.
-                                Morbi arcu quam, consectetur
-                                quis nisi ac, placerat
-                                condimentum quam. </p>
+                            <p class="servicetext text-center"> </p>
                         </div>
                     </div>
                 </div>
