adjusted landing page events card

--- a/index.html
+++ b/index.html
@@ -401,8 +401,8 @@
             </div>
             <div class="row">
                 <div class="col-12 col-sm-5  offset-sm-1 pt-4 pb-4">
-                    <div class="card h-100 rounded-0">
-                        <img src="images/worshipevents.jpg" class="card-img-top h-100 rounded-0" alt="sermon6">
+                    <div class="card h-100 rounded-0 eventscard">
+                       
                         <div class="card-img-overlay text-left mainevent">
                             <div class="col-12 col-sm-6 m-auto">
                                 <h1 class="mt-4 mb-4 text-light">
